[MSS-663] text alignment issue is fixed

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/search.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/search.scss
@@ -416,13 +416,13 @@
                         .color-elements {
                             height: rem(52);
                             margin: auto auto rem(15);
-                            display: block;
+                            display: inline-block;
                         }
 
                         .elements {
                             height: rem(70);
                             margin: auto auto rem(15);
-                            display: block;
+                            display: inline-block;
                         }
 
                         span {
